antlr-generated/antlrGen/command/setloopiterinsertsParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g 2017-03-28 11:47:27

  package antlrGen.command;
  
  import art.utils.Utils;
  import art.utils.SetLoopInfo;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class setloopiterinsertsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "COMMANDCHAR", "IDENT", "STRING", "EPRESSIONCHAR", "REFERENCECHAR", "INTEGER", "QUOTATIONMARK", "NOTNEWLINE", "WS", "NL", "DIGIT", "SPECCHAR", "LETTER", "DOT", "ANYCHAR", "'iter'", "'='", "','", "'&&'", "'||'", "'('", "')'", "'=='", "'!='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", "'\\\\\"'", "'\\\\#'", "'\\\\?'"
    };
    public static final int INTEGER=10;
    public static final int REFERENCECHAR=9;
    public static final int EPRESSIONCHAR=8;
    public static final int COMMANDCHAR=5;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=17;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int SPECCHAR=16;
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=13;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEGATION=4;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int QUOTATIONMARK=11;
    public static final int ANYCHAR=19;
    public static final int NOTNEWLINE=12;
    public static final int IDENT=6;
    public static final int DIGIT=15;
    public static final int NL=14;
    public static final int DOT=18;
    public static final int STRING=7;

    // delegates
    // delegators


        public setloopiterinsertsParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public setloopiterinsertsParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return setloopiterinsertsParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g"; }


    public static class evaluator_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "evaluator"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:25:1: evaluator : ( ( ws | nl )* COMMANDCHAR i= iter )* EOF ;
    public final setloopiterinsertsParser.evaluator_return evaluator() throws RecognitionException {
        setloopiterinsertsParser.evaluator_return retval = new setloopiterinsertsParser.evaluator_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token COMMANDCHAR3=null;
        Token EOF4=null;
        setloopiterinsertsParser.iter_return i = null;

        setloopiterinsertsParser.ws_return ws1 = null;

        setloopiterinsertsParser.nl_return nl2 = null;


        CommonTree COMMANDCHAR3_tree=null;
        CommonTree EOF4_tree=null;

        StringBuilder sb = new StringBuilder();
        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:27:3: ( ( ( ws | nl )* COMMANDCHAR i= iter )* EOF )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:28:3: ( ( ws | nl )* COMMANDCHAR i= iter )* EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:28:3: ( ( ws | nl )* COMMANDCHAR i= iter )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMANDCHAR||(LA2_0>=WS && LA2_0<=NL)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:28:5: ( ws | nl )* COMMANDCHAR i= iter
            	    {
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:28:5: ( ws | nl )*
            	    loop1:
            	    do {
            	        int alt1=3;
            	        int LA1_0 = input.LA(1);

            	        if ( (LA1_0==WS) ) {
            	            alt1=1;
            	        }
            	        else if ( (LA1_0==NL) ) {
            	            alt1=2;
            	        }


            	        switch (alt1) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:28:6: ws
            	    	    {
            	    	    pushFollow(FOLLOW_ws_in_evaluator89);
            	    	    ws1=ws();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws1.getTree());

            	    	    }
            	    	    break;
            	    	case 2 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:28:11: nl
            	    	    {
            	    	    pushFollow(FOLLOW_nl_in_evaluator93);
            	    	    nl2=nl();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nl2.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop1;
            	        }
            	    } while (true);

            	    COMMANDCHAR3=(Token)match(input,COMMANDCHAR,FOLLOW_COMMANDCHAR_in_evaluator97); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    COMMANDCHAR3_tree = (CommonTree)adaptor.create(COMMANDCHAR3);
            	    adaptor.addChild(root_0, COMMANDCHAR3_tree);
            	    }
            	    pushFollow(FOLLOW_iter_in_evaluator101);
            	    i=iter();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, i.getTree());
            	    if ( state.backtracking==0 ) {
            	      sb.append((i!=null?input.toString(i.start,i.stop):null));
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_evaluator108); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF4_tree = (CommonTree)adaptor.create(EOF4);
            adaptor.addChild(root_0, EOF4_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "evaluator"

    public static class iter_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "iter"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:31:1: iter : 'iter' ( ws )* i= IDENT ( ws )* '=' ( ws )* e= expression ( ws )* ( ',' ( ws )* i1= IDENT ( ws )* '=' ( ws )* e1= expression ( ws )* )* ( ws | nl )* ;
    public final setloopiterinsertsParser.iter_return iter() throws RecognitionException {
        setloopiterinsertsParser.iter_return retval = new setloopiterinsertsParser.iter_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token i=null;
        Token i1=null;
        Token string_literal5=null;
        Token char_literal8=null;
        Token char_literal11=null;
        Token char_literal14=null;
        setloopiterinsertsParser.expression_return e = null;

        setloopiterinsertsParser.expression_return e1 = null;

        setloopiterinsertsParser.ws_return ws6 = null;

        setloopiterinsertsParser.ws_return ws7 = null;

        setloopiterinsertsParser.ws_return ws9 = null;

        setloopiterinsertsParser.ws_return ws10 = null;

        setloopiterinsertsParser.ws_return ws12 = null;

        setloopiterinsertsParser.ws_return ws13 = null;

        setloopiterinsertsParser.ws_return ws15 = null;

        setloopiterinsertsParser.ws_return ws16 = null;

        setloopiterinsertsParser.ws_return ws17 = null;

        setloopiterinsertsParser.nl_return nl18 = null;


        CommonTree i_tree=null;
        CommonTree i1_tree=null;
        CommonTree string_literal5_tree=null;
        CommonTree char_literal8_tree=null;
        CommonTree char_literal11_tree=null;
        CommonTree char_literal14_tree=null;

        Map<String, String> iterVars = new HashMap<String,String>();
        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:33:3: ( 'iter' ( ws )* i= IDENT ( ws )* '=' ( ws )* e= expression ( ws )* ( ',' ( ws )* i1= IDENT ( ws )* '=' ( ws )* e1= expression ( ws )* )* ( ws | nl )* )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:33:5: 'iter' ( ws )* i= IDENT ( ws )* '=' ( ws )* e= expression ( ws )* ( ',' ( ws )* i1= IDENT ( ws )* '=' ( ws )* e1= expression ( ws )* )* ( ws | nl )*
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal5=(Token)match(input,20,FOLLOW_20_in_iter127); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal5_tree = (CommonTree)adaptor.create(string_literal5);
            adaptor.addChild(root_0, string_literal5_tree);
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:33:12: ( ws )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_iter129);
            	    ws6=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws6.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            i=(Token)match(input,IDENT,FOLLOW_IDENT_in_iter134); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            i_tree = (CommonTree)adaptor.create(i);
            adaptor.addChild(root_0, i_tree);
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:33:24: ( ws )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==WS) ) {
                    alt4=1;
                }


                switch (alt4) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_iter136);
            	    ws7=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws7.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            char_literal8=(Token)match(input,21,FOLLOW_21_in_iter139); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            char_literal8_tree = (CommonTree)adaptor.create(char_literal8);
            adaptor.addChild(root_0, char_literal8_tree);
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:33:32: ( ws )*
            loop5:
            do {
                int alt5=2;
                int LA5_0 = input.LA(1);

                if ( (LA5_0==WS) ) {
                    int LA5_2 = input.LA(2);

                    if ( (synpred6_setloopiterinserts()) ) {
                        alt5=1;
                    }


                }


                switch (alt5) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_iter141);
            	    ws9=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws9.getTree());

            	    }
            	    break;

            	default :
            	    break loop5;
                }
            } while (true);

            pushFollow(FOLLOW_expression_in_iter146);
            e=expression();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:33:49: ( ws )*
            loop6:
            do {
                int alt6=2;
                int LA6_0 = input.LA(1);

                if ( (LA6_0==WS) ) {
                    int LA6_2 = input.LA(2);

                    if ( (synpred7_setloopiterinserts()) ) {
                        alt6=1;
                    }


                }


                switch (alt6) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_iter148);
            	    ws10=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws10.getTree());

            	    }
            	    break;

            	default :
            	    break loop6;
                }
            } while (true);

            if ( state.backtracking==0 ) {
               if (Utils.canWrite()){ iterVars.put((i!=null?i.getText():null), (e!=null?input.toString(e.start,e.stop):null));} 
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:3: ( ',' ( ws )* i1= IDENT ( ws )* '=' ( ws )* e1= expression ( ws )* )*
            loop11:
            do {
                int alt11=2;
                int LA11_0 = input.LA(1);

                if ( (LA11_0==22) ) {
                    alt11=1;
                }


                switch (alt11) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:4: ',' ( ws )* i1= IDENT ( ws )* '=' ( ws )* e1= expression ( ws )*
            	    {
            	    char_literal11=(Token)match(input,22,FOLLOW_22_in_iter157); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal11_tree = (CommonTree)adaptor.create(char_literal11);
            	    adaptor.addChild(root_0, char_literal11_tree);
            	    }
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:8: ( ws )*
            	    loop7:
            	    do {
            	        int alt7=2;
            	        int LA7_0 = input.LA(1);

            	        if ( (LA7_0==WS) ) {
            	            alt7=1;
            	        }


            	        switch (alt7) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    	    {
            	    	    pushFollow(FOLLOW_ws_in_iter159);
            	    	    ws12=ws();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws12.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop7;
            	        }
            	    } while (true);

            	    i1=(Token)match(input,IDENT,FOLLOW_IDENT_in_iter164); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    i1_tree = (CommonTree)adaptor.create(i1);
            	    adaptor.addChild(root_0, i1_tree);
            	    }
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:21: ( ws )*
            	    loop8:
            	    do {
            	        int alt8=2;
            	        int LA8_0 = input.LA(1);

            	        if ( (LA8_0==WS) ) {
            	            alt8=1;
            	        }


            	        switch (alt8) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    	    {
            	    	    pushFollow(FOLLOW_ws_in_iter166);
            	    	    ws13=ws();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws13.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop8;
            	        }
            	    } while (true);

            	    char_literal14=(Token)match(input,21,FOLLOW_21_in_iter169); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    char_literal14_tree = (CommonTree)adaptor.create(char_literal14);
            	    adaptor.addChild(root_0, char_literal14_tree);
            	    }
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:29: ( ws )*
            	    loop9:
            	    do {
            	        int alt9=2;
            	        int LA9_0 = input.LA(1);

            	        if ( (LA9_0==WS) ) {
            	            int LA9_2 = input.LA(2);

            	            if ( (synpred10_setloopiterinserts()) ) {
            	                alt9=1;
            	            }


            	        }


            	        switch (alt9) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    	    {
            	    	    pushFollow(FOLLOW_ws_in_iter171);
            	    	    ws15=ws();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws15.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop9;
            	        }
            	    } while (true);

            	    pushFollow(FOLLOW_expression_in_iter176);
            	    e1=expression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, e1.getTree());
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:47: ( ws )*
            	    loop10:
            	    do {
            	        int alt10=2;
            	        int LA10_0 = input.LA(1);

            	        if ( (LA10_0==WS) ) {
            	            int LA10_1 = input.LA(2);

            	            if ( (synpred11_setloopiterinserts()) ) {
            	                alt10=1;
            	            }


            	        }


            	        switch (alt10) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:0:0: ws
            	    	    {
            	    	    pushFollow(FOLLOW_ws_in_iter178);
            	    	    ws16=ws();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws16.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop10;
            	        }
            	    } while (true);

            	    if ( state.backtracking==0 ) {
            	       if (Utils.canWrite()){ iterVars.put((i1!=null?i1.getText():null), (e1!=null?input.toString(e1.start,e1.stop):null));} 
            	    }

            	    }
            	    break;

            	default :
            	    break loop11;
                }
            } while (true);

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:116: ( ws | nl )*
            loop12:
            do {
                int alt12=3;
                int LA12_0 = input.LA(1);

                if ( (LA12_0==WS) ) {
                    int LA12_2 = input.LA(2);

                    if ( (synpred13_setloopiterinserts()) ) {
                        alt12=1;
                    }


                }
                else if ( (LA12_0==NL) ) {
                    int LA12_3 = input.LA(2);

                    if ( (synpred14_setloopiterinserts()) ) {
                        alt12=2;
                    }


                }


                switch (alt12) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:117: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_iter187);
            	    ws17=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws17.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:34:122: nl
            	    {
            	    pushFollow(FOLLOW_nl_in_iter191);
            	    nl18=nl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nl18.getTree());

            	    }
            	    break;

            	default :
            	    break loop12;
                }
            } while (true);

            if ( state.backtracking==0 ) {

                      if (Utils.canWrite())
                      { 
                          SetLoopInfo.addIter(iterVars);
                      } 
                  
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "iter"

    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:46:1: expression : ( freeExpression | stringExpression );
    public final setloopiterinsertsParser.expression_return expression() throws RecognitionException {
        setloopiterinsertsParser.expression_return retval = new setloopiterinsertsParser.expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        setloopiterinsertsParser.freeExpression_return freeExpression19 = null;

        setloopiterinsertsParser.stringExpression_return stringExpression20 = null;



        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:47:3: ( freeExpression | stringExpression )
            int alt13=2;
            int LA13_0 = input.LA(1);

            if ( (LA13_0==IDENT||LA13_0==INTEGER||LA13_0==WS||LA13_0==25||(LA13_0>=33 && LA13_0<=34)) ) {
                alt13=1;
            }
            else if ( ((LA13_0>=STRING && LA13_0<=EPRESSIONCHAR)) ) {
                alt13=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 13, 0, input);

                throw nvae;
            }
            switch (alt13) {
                case 1 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:47:5: freeExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_freeExpression_in_expression217);
                    freeExpression19=freeExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, freeExpression19.getTree());

                    }
                    break;
                case 2 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:48:5: stringExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_stringExpression_in_expression223);
                    stringExpression20=stringExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stringExpression20.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class stringExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stringExpression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:51:1: stringExpression : ( nameExpression | STRING )+ ;
    public final setloopiterinsertsParser.stringExpression_return stringExpression() throws RecognitionException {
        setloopiterinsertsParser.stringExpression_return retval = new setloopiterinsertsParser.stringExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRING22=null;
        setloopiterinsertsParser.nameExpression_return nameExpression21 = null;


        CommonTree STRING22_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:52:3: ( ( nameExpression | STRING )+ )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopiterinserts.g:52:5: ( nameExpression | STRING )+
            {
            root_0 = (CommonTree)adaptor.nil();
